Improve legacy JNLP compatibility for JDK 11+ and JDK selection
Some applications still declare --add-modules=java.xml.bind in
java-vm-args. On JDK 11 and later that module is absent and causes
ModuleFindException at launch. IcedTea-Web now strips those redundant
entries on relaunch, logs a trace-level explanation for operators, and
applies JAXB/activation module settings automatically on JDK 11–16.

Default JDK match strategy changes from Maximum to Exact so a j2se
version="11+" request selects JDK 11 rather than the newest installed
JDK, reducing surprise for legacy deployments. Maximum and Minimum
remain available in the control panel.